# vs-several-prj-cmake-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  _configure_cmake_ninja_debug.bat  _configure_cmake_ninja_release.bat  vcpkg.json
core-functionality/: CMakeLists.txt
core-test/: CMakeLists.txt
core-test/src/: core-test.cpp
hello-app/: CMakeLists.txt
